--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -121,6 +121,76 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、韩国、欧洲、新加坡、美国、香港、加拿大等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-4-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-4-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、韩国、美国、香港、加拿大、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-3-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-3-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、新加坡、日本、欧洲、韩国、加拿大等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-2-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="6月2日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-2-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月2日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、香港、韩国、日本、加拿大、欧洲等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-06-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-6-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-6-1-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">6月1日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、美国、香港、新加坡、加拿大、日本等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-05-31">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-5-31-node-share.htm" class="xcblog-blog-url">
@@ -191,78 +261,8 @@
                                     这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、香港、美国、新加坡等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-26-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="5月26日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-26-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月26日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、加拿大、新加坡、美国、香港、欧洲、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-25-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-25-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、新加坡、香港、韩国、日本、美国、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-24-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="5月24日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-24-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月24日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、韩国、欧洲、加拿大、日本、香港、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-23">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-23-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="5月23日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-23-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月23日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、日本、美国、韩国、欧洲、加拿大、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-05-22">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-5-22-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-5-22-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、香港、美国、新加坡等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-7-free-subscribe-node.htm" title="5月7日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月7日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-node-share-links.htm" title="5月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-9-free-node-subscribe.htm" title="5月9日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月9日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-14-free-node-subscribe-links.htm" title="5月14日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月14日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-12-free-high-speed-nodes.htm" title="5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-28-free-node-subscribe-links.htm" title="5月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">5月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-11-free-high-speed-nodes.htm" title="5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月11日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-4-free-subscribe-node.htm" title="6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">6月4日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-8-free-subscribe-node.htm" title="6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月8日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-29-node-share-links.htm" title="5月29日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">5月29日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-free-node-subscribe-links.htm" title="6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">6月14日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-2-node-share-links.htm" title="6月2日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月2日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-18-free-node-subscribe.htm" title="5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-10-free-subscribe-node.htm" title="5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-3-free-high-speed-nodes.htm" title="5月3日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">5月3日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-31-node-share.htm" title="5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月31日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-4-free-high-speed-nodes.htm" title="5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址">5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-3-node-share.htm" title="6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">6月3日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
